Cleanup + sample usage html added + references to css, js replaced
- tabs replaced to white spaces
- sample HTML added
- as absolute URLs from responsivedialog.com

--- a/dialogs/dialog_template.html
+++ b/dialogs/dialog_template.html
@@ -21,7 +21,8 @@
                 <br>
                 <div class="img-container">
                     <div class="centerer"></div>
-                    <img src="<ADD IMAGE HERE THAT WILL SCALE AUTOMATICALLY>" alt="Your scalable image." />
+                    <!-- YOU CAN ADD IMAGE HERE THAT WILL SCALE AUTOMATICALLY -->
+                    <img src="//responsivedialog.com/scalable-image.png" alt="Your scalable image." />
                 </div
                 <br>
                 <br>
