--- a/index.html
+++ b/index.html
@@ -1,1 +1,84 @@
-Initital content
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Basic usage</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Lightweight dialog presenter for any screens built on top of jQuery Mobile.">
+    <meta name="author" content="Peter Nagy (@petusa), peter.x.nagy@gmail.com">
+
+    <!-- styles -->
+    <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../assets/css/demo.css" rel="stylesheet">
+    <link href="../assets/css/bootstrap-responsive.min.css" rel="stylesheet">
+  </head>
+
+  <body>
+
+    <div class="container-narrow">
+<!--       <div class="masthead">
+        <ul class="nav nav-pills pull-right">
+          <li><a href="https://github.com/petusa/responsivedialog">Github</a></li>
+        </ul>
+        <h3 class="muted">ResponsiveDialog</h3>
+      </div> -->
+
+      <hr>
+
+      <div class="jumbotron">
+        <h1>ResponsiveDialog</h1>
+        <p class="lead">This is the basic usage of ResponsiveDialog. Click the button below to see it working.</p>
+        <a class="btn btn-large btn-success" href="javascript:void(0);" onclick="javascript:ResponsiveDialog.showDialog('welcome.html');">Click me!</a>
+      </div>
+
+      <hr>
+
+      <div class="row-fluid marketing">
+        <div class="span6">
+          <h4>Section One</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis mollis augue a neque cursus ac blandit orci faucibus. Phasellus nec metus purus.</p>
+
+          <h4>Section Two</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis mollis augue a neque cursus ac blandit orci faucibus. Phasellus nec metus purus.</p>
+
+          <h4>Section Three</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis mollis augue a neque cursus ac blandit orci faucibus. Phasellus nec metus purus.</p>
+          </div>
+
+        <div class="span6">
+          <h4>Section Four</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis mollis augue a neque cursus ac blandit orci faucibus. Phasellus nec metus purus.</p>
+
+          <h4>Section Five</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis mollis augue a neque cursus ac blandit orci faucibus. Phasellus nec metus purus.</p>
+
+          <h4>Section Six</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis mollis augue a neque cursus ac blandit orci faucibus. Phasellus nec metus purus.</p>
+        </div>
+      </div>
+
+      <hr>
+    </div>
+    <script src="//code.jquery.com/jquery-2.2.1.min.js"></script>
+    <script type="text/javascript" src="../responsivedialog.js"></script>
+  <script type="text/javascript">
+    $(document).ready(function(){
+      ResponsiveDialog.init({
+        onDialogsReady: function(){ console.log("ResponsiveDialog ready"); },
+        onDialogClosed: function(id){ console.log("responsive dialog with id '" + id + "' closed"); }
+      });
+    });
+  </script>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-74446713-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
+
+  </body>
+</html>
