--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Basic usage</title>
+    <title>ResponsiveDialog</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Lightweight dialog presenter for any screens built on top of jQuery Mobile.">
     <meta name="author" content="Peter Nagy (@petusa), peter.x.nagy@gmail.com">
@@ -26,8 +26,8 @@
       <hr>
 
       <div class="jumbotron">
-        <h1>ResponsiveDialog</h1>
-        <p class="lead">This is the basic usage of ResponsiveDialog. Click the button below to see it working.</p>
+        <h1>Responsive Dialog</h1>
+        <p class="lead">A lightweight dialog presenter for any screens and devices. Click the button below to see it working.</p>
         <a class="btn btn-large btn-success" href="javascript:void(0);" onclick="javascript:ResponsiveDialog.showDialog('welcome.html');">Click me!</a>
       </div>
 
@@ -35,50 +35,52 @@
 
       <div class="row-fluid marketing">
         <div class="span6">
-          <h4>Section One</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis mollis augue a neque cursus ac blandit orci faucibus. Phasellus nec metus purus.</p>
+          <h4>Leaves your host page intact</h4>
+          <p>Extend your current web and landing pages with dialogs or dialog based tutorials without changing your current sites content.</p>
 
-          <h4>Section Two</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis mollis augue a neque cursus ac blandit orci faucibus. Phasellus nec metus purus.</p>
+          <h4>Design dialogs separately</h4>
+          <p>Let your designers create nice looking dialogs without knowing where those will be used later.</p>
 
-          <h4>Section Three</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis mollis augue a neque cursus ac blandit orci faucibus. Phasellus nec metus purus.</p>
-          </div>
+          <h4>Lightweight</h4>
+          <p>Only embed a small amout of Javascript and let the ResponsiveDialog and jQuery mobile integrate dialogs with your site.</p>
+        </div>
 
         <div class="span6">
-          <h4>Section Four</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis mollis augue a neque cursus ac blandit orci faucibus. Phasellus nec metus purus.</p>
+          <h4>UI responsive and touch enabled</h4>
+          <p>It is based on jQuery mobile templates and styles that guarantess dialogs will scale to the dimensons of the site visitors' screens.</p>
 
-          <h4>Section Five</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis mollis augue a neque cursus ac blandit orci faucibus. Phasellus nec metus purus.</p>
+          <h4>Supports dialog flows</h4>
+          <p>With dialogs linked to eachother and/or consecutively you may also create easy page forward and back tutorials.</p>
 
-          <h4>Section Six</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis mollis augue a neque cursus ac blandit orci faucibus. Phasellus nec metus purus.</p>
+          <h4>Open source</h4>
+          <p>It is an open initiative to help creating nice looking dialogs for developers, on both the desktop and mobile web. Learn more, and download from the <a href="http://github.com/petusa/ResponsiveDialog">ResponsiveDialog Github page</a>.</p>
         </div>
       </div>
 
       <hr>
     </div>
+
+    <!-- ResponsiveDialog JS dependencies and resources -->
     <script src="//code.jquery.com/jquery-2.2.1.min.js"></script>
     <script type="text/javascript" src="../responsivedialog.js"></script>
-  <script type="text/javascript">
-    $(document).ready(function(){
-      ResponsiveDialog.init({
-        onDialogsReady: function(){ console.log("ResponsiveDialog ready"); },
-        onDialogClosed: function(id){ console.log("responsive dialog with id '" + id + "' closed"); }
+    <script type="text/javascript">
+      $(document).ready(function(){
+        ResponsiveDialog.init({
+          onDialogsReady: function(){ console.log("ResponsiveDialog ready"); },
+          onDialogClosed: function(id){ console.log("responsive dialog with id '" + id + "' closed"); }
+        });
       });
-    });
-  </script>
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    </script>
 
-    ga('create', 'UA-74446713-1', 'auto');
-    ga('send', 'pageview');
-
-  </script>
+    <!-- Google Analytics -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-74446713-1', 'auto');
+      ga('send', 'pageview');
+    </script>
 
   </body>
 </html>
