--- a/sample.html
+++ b/sample.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>Test page</title>
-    <script src="//code.jquery.com/jquery-2.2.1.min.js"></script>
-    <script type="text/javascript" src="//responsivedialog.com/responsivedialog.js"></script>
+    <script src="http://code.jquery.com/jquery-2.2.1.min.js"></script>
+    <script type="text/javascript" src="http://responsivedialog.com/responsivedialog.js"></script>
 </head>
 <body>
     <h3>Hello ResponsiveDialog&GitHub visitor!</h3>
